    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app

    http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
    http://stackoverflow.com/questions/1276029/non-blocking-stdio
    TODO: Move documentation to Markdown format instead of raw, old-school HTML
    TODO: Submenus for Status Menus

5.2
    TODO: File watching still broken for script path
    TODO: Test stdin stuff in command line tool
    TODO: Create URI protocol handling Example: say://

    * Platypus apps can now register as URL scheme handlers and receive opened URLs as arguments to script
    * Platypus apps can now accept dragged URLs
    * Platypus apps that accept dropped files now have an Open Recent menu
    * Platypus now warns about about identical file names in bundled files
    * Text in Platypus apps now has a minimum font size
    * The Platypus Profile format has changed slightly in this version, but old formats can still be read
    * Relative paths are now supported in Platypus Profiles, but only through manual editing. Platypus app and CLT still generate Profiles with absolute paths.
    * Droplet apps now quit when their window is closed
    * Fixed annoying issue where status menu would render before receiving all script output
    * Fixed performance issue with printing many lines to text window. It is now very fast again.
    * Fixed bug where "Use as template" was shown when Status Item mode was "Text"
    * Fixed bug where command line tool failed to infer app name from script filename, resulting in "(null).app"
    * Fixed bug where files that had been moved were not colored red in Bundled Files list
    * Fixed bug where valid menu items were disabled in Action menu
    * Fixed issue with console spamming due to missing CFBundleTypeRole. Now always "Viewer".
    * Fixed bug where text settings were not properly loaded by the GUI